Update index.html via Tasker

--- a/index.html
+++ b/index.html
@@ -1291,12 +1291,12 @@ ff02::3 ip6-allhosts
 0.0.0.0 asq.r77vh0.pw
 0.0.0.0 rc-room.com
 0.0.0.0 pixel.realclever.com
-0.0.0.0 events.redditmedia.com
+0.0.0.0 events.media.com
 0.0.0.0 www.redshell.io
 0.0.0.0 remove-ads.xyz
 0.0.0.0 renovatesystem.com
-0.0.0.0 rereddit.com
-0.0.0.0 www.rereddit.com
+0.0.0.0 re.com
+0.0.0.0 www.re.com
 0.0.0.0 resumersvo.fun
 0.0.0.0 rjmwqf.com
 0.0.0.0 rmagent.xyz
@@ -11676,7 +11676,7 @@ ff02::3 ip6-allhosts
 0.0.0.0 recreativ.ru
 0.0.0.0 track.recreativ.ru
 
-# [redditmedia.com]
+# [media.com]
 
 # [redfast.com]
 0.0.0.0 redfast.com
@@ -51313,7 +51313,7 @@ ff02::3 ip6-allhosts
 0.0.0.0 redakcyjnypost.pics
 0.0.0.0 redbackstudio.com
 0.0.0.0 redcounties.com
-0.0.0.0 redditian.com
+0.0.0.0 ian.com
 0.0.0.0 redemprendedor.com
 0.0.0.0 redenvalerio.com
 0.0.0.0 rederfarben.com
@@ -84755,7 +84755,7 @@ ff02::3 ip6-allhosts
 0.0.0.0 www.redakcyjnypost.pics
 0.0.0.0 www.redbackstudio.com
 0.0.0.0 www.redcounties.com
-0.0.0.0 www.redditian.com
+0.0.0.0 www.ian.com
 0.0.0.0 www.redemprendedor.com
 0.0.0.0 www.redenvalerio.com
 0.0.0.0 www.rederfarben.com
@@ -103332,7 +103332,7 @@ ff02::3 ip6-allhosts
 0.0.0.0 indium.openx.net
 0.0.0.0 tracking.percentmobile.com
 0.0.0.0 display.provenpixel.com
-0.0.0.0 ads.reddit.com
+0.0.0.0 ads..com
 0.0.0.0 www.reelcentric.com
 0.0.0.0 socialspark.com
 0.0.0.0 req.tidaltv.com
@@ -122825,7 +122825,7 @@ ff02::3 ip6-allhosts
 0.0.0.0 click.news.vans.com
 0.0.0.0 click.nl.npr.org
 0.0.0.0 click.nvgaming.nvidia.com
-0.0.0.0 click.redditmail.com
+0.0.0.0 click.mail.com
 0.0.0.0 click.twcwigs.com
 0.0.0.0 click.v.visionlab.es
 0.0.0.0 click2freemoney.com
